# IoT-lab1-2018

./: .gitignore  CMakeLists.txt  README.md
js-part/: app.js
lib/src/: OlsApi.h
src/: CMakeLists.txt  main.cpp  mainas.cpp.backup
